# moonbase-ng

./: .gitignore  moonbase.cabal  test-moonbase
src/: #Moonbase.hs#  .#Moonbase.hs  Main.hs  Moonbase.hs
src/Moonbase/: Application.hs  Core.hs  DBus.hs  Desktop.hs  Panel.hs  Pipe.hs  Preferred.hs  Signal.hs  Theme.hs  Util.hs  WM.hs
src/Moonbase/Panel/: Items.hs
src/Moonbase/Panel/Items/: Clock.hs  Cpu.hs  DBus.hs  Expand.hs  Tray.hs
src/Moonbase/Util/: Cairo.hs  Css.hs  Gtk.hs  StrutProperties.hs
src/Moonbase/Util/Widget/: Bar.hs  Chart.hs
src/Moonbase/WM/: XMonad.hs
src/Moonbase/WM/XMonad/: Impl.hs
test/: DocCoverage.hs  DocTest.hs  Main.hs
test/Moonbase/: UtilSpec.hs
