name:                moonbase
version:             0.1.0.0
synopsis:            A modular and lightweight desktop environment
homepage:            http://none.io/moonbase
license:             LGPL-2.1
license-file:        LICENSE
author:              Felix Schnizlein
maintainer:          felix@none.io
category:            System
build-type:          Simple
cabal-version:       >=1.10

flag withXMonad
  description: Enable XMonad integration
  default: True

library
  exposed-modules:    Moonbase
                    , Moonbase.Core
                    , Moonbase.DBus
                    , Moonbase.Pipe
                    , Moonbase.Theme
                    , Moonbase.Application
                    , Moonbase.Desktop
                    , Moonbase.Util.Gtk
                    , Moonbase.Util.Cairo
                    , Moonbase.Util.Css
                    , Moonbase.Panel
                    , Moonbase.Panel.Items
                    , Moonbase.Panel.Items.Expand
                    , Moonbase.Panel.Items.DBus
                    , Moonbase.Panel.Items.Tray
                    , Moonbase.Panel.Items.Clock
                    , Moonbase.Panel.Items.Cpu
                    , Moonbase.Util.Widget.Chart
                    , Moonbase.Util.Widget.Bar
--                    Moonbase.Component
--                    Moonbase.Pipe
--                    Moonbase.Application
--                    Moonbase.Item

--                    Moonbase.WindowManager
--                    Moonbase.Theme
--                    Moonbase.Panel
--                    Moonbase.Prompt
--                    Moonbase.Desktop
--
--   exposed-modules:       Moonbase.Desktop.Gtk
--                        , Moonbase.Desktop.Gtk.EventField
--
--                        , Moonbase.Panel.Gtk
--                        , Moonbase.Panel.Gtk.Item.Spacer
--                        , Moonbase.Panel.Gtk.Item.Date
--                        , Moonbase.Panel.Gtk.Item.Label
--                        , Moonbase.Panel.Gtk.Item.Cpu
--                        , Moonbase.Panel.Gtk.Item.Mem
--
--                        , Moonbase.Prompt.Gtk
--
--                        , Moonbase.Gtk.GraphWidget
--                        , Moonbase.Gtk.PromptWidget
--                        , Moonbase.Gtk.Utils

  other-modules:       Moonbase.Util.StrutProperties

  pkgconfig-depends:    gtk+-3.0

  build-depends:
      base                  >= 4    && < 5
    , containers            >= 0.3  && < 0.6
    , vector                >= 0.11.0.0
    , transformers          >= 0.3.0.0
    , mtl                   >= 2.1.2
    , filepath              >= 1.3.0.1
    , dbus                  >= 0.10.7
    , directory             >= 1.2.0.1
    , process               >= 1.1.0.2
    , time                  >= 1.4.0.1
--    , old-locale            >= 1.0.0.5
    , stm                   >= 2.4.2
    , dyre                  >= 0.8.12
    , lens                  >= 4.9.1
    , optparse-applicative  >= 0.11.0.2
    , xdg                   >= 0.1.0.0
    , gtk3                  >= 0.13.7
    , gtk3-traymanager      >= 0.1.5
    , glib                  >= 0.13.1.0
    , cairo                 >= 0.13.1.0

  c-sources:           set_properties.c


  If flag(withXMonad)
    build-depends:
       xmonad            >= 0.11
     , xmonad-contrib    >= 0.11.3
     , X11               >= 1.6.1.1
     , utf8-string       >= 0.3.8

    other-modules:      Moonbase.WM.XMonad.Impl
    exposed-modules:    Moonbase.WM.XMonad

  hs-source-dirs:       src
  default-language:     Haskell2010

--  ghc-options: -Wall



executable moonbase
  main-is:             Main.hs

  pkgconfig-depends:    gtk+-3.0

  build-depends:
      base                  >= 4.7     && < 5
    , containers            >= 0.5
    , vector                >= 0.11.0.0
    , transformers          >= 0.3.0.0
    , mtl                   >= 2.1.2
    , filepath              >= 1.3.0.1
    , dbus                  >= 0.10.7
    , directory             >= 1.2.0.1
    , process               >= 1.1.0.2
    , time                  >= 1.4.0.1
    , old-locale            >= 1.0.0.5
    , stm                   >= 2.4.2
    , dyre                  >= 0.8.12
    , lens                  >= 4.9.1
    , optparse-applicative  >= 0.11.0.2
    , xdg                   >= 0.1.0.0
    , gtk3                  >= 0.13.7
    , gtk3-traymanager      >= 0.1.5
    , glib                  >= 0.13.1.0
    , cairo                 >= 0.13.1.0

  hs-source-dirs:      src

  c-sources:           set_properties.c

  other-modules:       Moonbase.Util.StrutProperties

  default-language:    Haskell2010

  ghc-options: -threaded

  If flag(withXMonad)
    build-depends:
       xmonad            >= 0.11
     , xmonad-contrib    >= 0.11.3
     , utf8-string       >= 0.3.8
     , X11               >= 1.6.1.1
